--- a/intro.tex
+++ b/intro.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 \label{sec.introduction}
-
+\linda{this is a test - ignore!}
 Despite substantial effort, privileged code in modern systems is vulnerable 
 to many types of attacks.  \cappos{Emphasize failures in the TCB allowing more 
 impactful crashes (complete system failures), privilege escalation, etc.
