--- a/paper.tex
+++ b/paper.tex
@@ -30,6 +30,7 @@
 \usepackage{multirow}
 \usepackage{booktabs}
 \usepackage{color}
+\usepackage[normalem]{ulem} 
 
 \newcommand{\urlwofont}[1]{\underline{\urlstyle{same}\url{#1}}}
 
