yiwen: update introduction section.

--- a/introduction_yiwen_v1.0.tex
+++ b/introduction_yiwen_v1.0.tex
@@ -45,7 +45,7 @@ legacy programs will not run, while containing security flaws in this code.
 
 The contributions of this paper are as follows:
 \begin{itemize}
-\item We proposed a novel metric for evaluation security level of the privileged code. 
+\item We proposed a novel metric for evaluating security level of the privileged code. 
 Our metric consists of ``commonly'' executed code in the kernel at the level of ``lines of code''. 
 
 \item We quantitatively measured the privileged code using our metric, and labeled certain portions of 
@@ -58,3 +58,4 @@ for running legacy applications.
 \item Evaluation shows that implementation of our sandbox Lind only has the potential to trigger 2.5\% of zero-day 
 vulnerabilities we examined, while systems built without using our security metric have more chances to trigger 
 vulnerabilities. (illustrate with data from running Graphene and Virtualbox)
+\end{itemize}
