yiwen: update paper.tex

--- a/paper.tex
+++ b/paper.tex
@@ -65,16 +65,16 @@
 
 
 %make title bold and 14 pt font (Latex default is non-bold, 16 pt)
-\title{Quantifying and Minimizing the Risk of Privilege Escalation Attacks}
+\title{Quantifying and Minimizing the Risk of Kernel Exploitation}
 
 %for single author (just remove % characters)
 \author{
 %{\rm Yiwen Li}\\
 % Your Institution
 %\and
-{\rm Yiwen Li, Justin Cappos, others TBD}\\\\
-New York University, others TBD \\
-\{liyiwen, jcappos\}@nyu.edu
+{\rm Yiwen Li, Ali Gholami, Yanyan Zhuang, Justin Cappos}\\\\
+New York University, KTH Royal Institute of Technology, UBC \\
+\{liyiwen, yyzh, jcappos\}@nyu.edu, gholami@kth.se
 % copy the following lines to add more authors
 % \and
 % {\rm Name}\\
@@ -95,9 +95,9 @@ New York University, others TBD \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\input{abstract}
-\input{intro}
-\input{background}
+\input{abstract_yiwen_v1.0}
+\input{introduction_yiwen_v1.0}
+\input{background_yiwen_v1.0}
 \input{architecture}
 \input{evaluation}
 \input{related_work}
